Adds border color & deletes duplicate

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -5,7 +5,6 @@
 
 @basic-blue: #161C35;
 @basic-blue-other: #192144;
-@basic-blue-other-dark: #161C35;
 @basic-blue-inner: #182044;
 @basic-blue-light: #1D2E5B;
 @basic-steelblue: #EDEFF6;
@@ -37,6 +36,7 @@
 @special-pink: #F9EAEA;
 @special-green: #81E31E;
 @special-shadow: rgba(29, 46, 91, 0.14);
+@special-border-blue-fade: #959BB2;
 
 // Viewports
 @mobile-width-only: 767px;
