Makes everything PP according to updated design

--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -124,6 +124,12 @@
     margin-bottom: 0;
 
     &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &:not(:last-child) {
       margin-right: 60px;
     }
   }
