--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -43,6 +43,8 @@
 
     @media (min-width: @tablet-width) {
       margin-bottom: 37px;
+      padding-right: 17px;
+      letter-spacing: 0.01em;
     }
 
     @media (min-width: @desktop-width) {
