--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,7 +1,7 @@
 .review {
   margin: 0;
   padding: 48px 50px 29px;
-  background-color: @basic-blue-other-dark;
+  background-color: @basic-blue;
 
   @media (min-width: @tablet-width) {
     padding: 0 360px 0 73px;
