--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -207,11 +207,12 @@
   }
 
   &--select {
-    padding: 11px 13px 11px;
+    padding: 12px 65px 11px 10px;
     font-weight: 500;
     font-size: 14px;
     line-height: 18px;
     text-align: left;
+    letter-spacing: 0.1em;
     background-color: @white;
     border-radius: 4px;
 
