--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -16,7 +16,7 @@
 }
 
 .info__fieldset {
-  padding: 16px;
+  padding: 16px 22px 17px;
 
   @media (min-width: @tablet-width) {
     padding: 24px;
@@ -40,6 +40,7 @@
 
   &--transport {
     order: 2;
+    padding: 5px 22px 15px;
 
     @media (min-width: @tablet-width) {
       position: relative;
