--- a/source/less/blocks/level-badge.less
+++ b/source/less/blocks/level-badge.less
@@ -61,3 +61,13 @@
   top: 0;
   left: 0;
 }
+
+// User profile badge
+.level-badge--user-profile .level-badge__number {
+  top: 18px;
+}
+
+.level-badge--user-profile .level-badge__label {
+  top: 24px;
+  padding: 7px 10px 0;
+}
