--- a/source/less/blocks/plans-list.less
+++ b/source/less/blocks/plans-list.less
@@ -5,7 +5,7 @@
 }
 
 .plans-list__item {
-  padding: 24px 23px;
+  padding: 21px 25px 19px;
   background-color: @white;
   border-radius: 10px;
 
@@ -71,11 +71,12 @@
   margin: 0;
   font-weight: 500;
   .fontsize(14px);
+  letter-spacing: 0.06em;
   text-transform: uppercase;
   color: @basic-blue-light;
 
   &:last-of-type {
-    margin-bottom: 24px;
+    margin-bottom: 20px;
 
     @media (min-width: @tablet-width) {
       margin-bottom: 0;
@@ -119,6 +120,7 @@
 .plans-list__edit {
   font-weight: 500;
   .fontsize(14px);
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: fade(@black, 30%);
 
