--- a/source/less/blocks/calendar.less
+++ b/source/less/blocks/calendar.less
@@ -12,7 +12,7 @@
 }
 
 .calendar__month-name {
-  padding: 12px 0 11px;
+  padding: 12px 10px 10px;
   font-weight: 700;
   .fontsize(20px);
   color: @basic-blue-light;
@@ -88,9 +88,8 @@
 
 .calendar__day {
   box-sizing: border-box;
-  min-height: 32px;
   margin: 0;
-  padding: 8px;
+  padding: 8px 8px 5px;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
