--- a/source/less/blocks/descriptions.less
+++ b/source/less/blocks/descriptions.less
@@ -1,5 +1,5 @@
 .descriptions {
-  padding: 10px 10px 0;
+  padding: 10px 11px 0;
 
   @media (min-width: @tablet-width) {
     padding: 0;
@@ -24,6 +24,11 @@
     background-color: @basic-blue-light;
   }
 
+  &:not(:last-child) {
+    padding-bottom: 32px;
+    border-left: 2px solid @basic-blue-light;
+  }
+
   @media (max-width: @mobile-width-only) {
     &::before {
       content: "";
@@ -46,21 +51,18 @@
       right: -7px;
       .circle(14px);
     }
-  }
-}
 
-.descriptions__item:not(:last-child) {
-  padding-bottom: 27px;
-  border-left: 2px solid @basic-blue-light;
-
-  @media (min-width: @tablet-width) {
-    padding-bottom: 44px;
-    border-left: 0;
-    border-right: 2px solid @basic-blue-light;
+    &:not(:last-child) {
+      padding-bottom: 44px;
+      border-left: 0;
+      border-right: 2px solid @basic-blue-light;
+    }
   }
 
   @media (min-width: @desktop-width) {
-    padding-bottom: 47px;
+    &:not(:last-child) {
+      padding-bottom: 47px;
+    }
   }
 }
 
@@ -68,11 +70,34 @@
   display: inline-block;
   box-sizing: border-box;
   width: 100%;
-  padding: 0 11px;
+  padding: 0 10px;
   font-weight: 500;
   .fontsize(18px);
   color: @basic-blue-light;
   transform: translateY(-50%);
+  white-space: nowrap;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: block;
+    width: 72px;
+    height: 100%;
+    .gradient-white(28%);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: -4px;
+    right: 0;
+    display: block;
+    width: 35px;
+    height: 24px;
+    background-color: @red;
+  }
 
   @media (min-width: @tablet-width) {
     margin-bottom: 20px;
@@ -87,6 +112,8 @@
 }
 
 .descriptions__textarea {
+  position: relative;
+  top: 4px;
   box-sizing: border-box;
   width: 100%;
   height: 220px;
