--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -14,7 +14,7 @@
 }
 
 .form__fieldset:not(:last-of-type) {
-  margin-bottom: 18px;
+  margin-bottom: 19px;
 }
 
 .form__legend {
@@ -54,10 +54,11 @@
 
 .form__label {
   display: inline-block;
-  margin-bottom: 8px;
-  padding-right: 70px;
+  margin-bottom: 7px;
+  padding-right: 45px;
   font-weight: 500;
   .fontsize(16px);
+  letter-spacing: 0.09em;
   text-transform: uppercase;
   color: @basic-blue-light;
 
@@ -137,7 +138,7 @@
 
 .form__checkbox-kids {
   position: relative;
-  top: 115px;
+  top: 110px;
 
   @media (min-width: @tablet-width) {
     position: static;
@@ -152,7 +153,7 @@
 .form__input-days {
   position: relative;
   top: -25px;
-  margin-bottom: 41px;
+  margin-bottom: 44px;
 
   @media (min-width: @tablet-width) {
     position: static;
@@ -193,6 +194,13 @@
 }
 
 .form__button {
+  font-size: 17px;
+  line-height: 20px;
+
+  &::after {
+    display: none;
+  }
+
   @media (max-width: @mobile-width-only) {
     display: flex;
     justify-content: center;
@@ -209,6 +217,7 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 30px;
+  letter-spacing: 0.01em;
   text-transform: uppercase;
   text-align: center;
   color: @basic-blue-light;
