--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -19,7 +19,7 @@
     &::before {
       content: "";
       position: absolute;
-      top: 147px;
+      top: 117px;
       left: 0;
       display: block;
       width: 100%;
@@ -46,7 +46,7 @@
 
   &--top {
     color: @white;
-    background-color: @basic-blue-other-dark;
+    background-color: @basic-blue;
     border-radius: 0;
 
     @media (min-width: @tablet-width) {
@@ -113,7 +113,7 @@
   min-height: 143px;
   padding: 95px 25px 12px;
   background-color: @basic-blue-inner;
-  border-radius: 0 0 25px 25px;
+  border-radius: 0 0 20px 20px;
 
   @media (min-width: @tablet-width) {
     padding: 224px 75px 66px;
@@ -151,30 +151,6 @@
     line-height: 18px;
     text-transform: uppercase;
   }
-
-  &--main {
-    position: relative;
-    display: inline-block;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: -43px;
-      left: 0;
-      display: block;
-      width: 100%;
-      height: 5px;
-      background-color: @special-orange;
-      border-radius: 4px;
-    }
-
-    @media (min-width: @tablet-width) {
-      &::after {
-        bottom: -70px;
-        height: 8px;
-      }
-    }
-  }
 }
 
 .page-main__back-link {
@@ -185,7 +161,7 @@
 .page-main--inner .page-main__section {
   position: relative;
   margin-bottom: -25px;
-  border-radius: 25px 25px 0 0;
+  border-radius: 29px 29px 0 0;
 
   &:nth-of-type(2) {
     background-color: @special-blue-light;
@@ -215,8 +191,23 @@
   }
 
   &--main {
+    position: relative;
+    display: inline-block;
+    margin: 0;
     .fontsize(36px);
     color: @white;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -14px;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 5px;
+      background-color: @special-orange;
+      border-radius: 4px;
+    }
 
     @media (min-width: @tablet-width) {
       margin-bottom: 0;
@@ -224,6 +215,7 @@
 
       &::after {
         bottom: -68px;
+        height: 8px;
       }
     }
 
