--- a/source/less/blocks/step.less
+++ b/source/less/blocks/step.less
@@ -1,5 +1,5 @@
 .step {
-  padding: 24px 25px 23px;
+  padding: 24px 25px 10px;
   background-color: @white;
   border-radius: 10px;
 
@@ -49,7 +49,7 @@
 }
 
 .step__description {
-  margin: 0 0 20px;
+  margin: 0 0 17px;
   font-weight: 400;
 
   @media (min-width: @tablet-width) {
@@ -70,10 +70,22 @@
 }
 
 .step__fieldset {
+  &:not(:last-of-type) {
+    margin-bottom: 15px;
+  }
+
+  &:last-of-type {
+    margin-bottom: 23px;
+  }
+
   @media (min-width: @tablet-width) {
     padding-top: 26px;
     border-top: 1px solid @special-grey-border-dark;
     border-radius: 0;
+
+    &:last-of-type {
+      margin-bottom: 47px;
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -87,35 +99,41 @@
       padding-top: 0;
       border-top: 0;
     }
+
+    &:last-of-type {
+      margin-bottom: 57px;
+    }
   }
 
   &--countries {
+    position: relative;
+    top: 2px;
+
+    &:last-of-type {
+      margin-bottom: 5px;
+    }
+
     @media (min-width: @tablet-width) {
       padding-top: 0;
     }
   }
 
   &--descriptions {
+    position: relative;
+    top: 2px;
+
+    &:last-of-type {
+      margin-bottom: 21px;
+    }
+
     @media (min-width: @tablet-width) {
       padding-top: 75px;
     }
   }
 }
 
-.step__fieldset:last-of-type {
-  margin-bottom: 25px;
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 47px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-bottom: 57px;
-  }
-}
-
 .step--no-side-padding .step__buttons {
   @media (max-width: @mobile-width-only) {
-    padding: 0 25px;
+    padding: 0 20px;
   }
 }
