--- a/source/less/blocks/user-profile.less
+++ b/source/less/blocks/user-profile.less
@@ -5,7 +5,7 @@
     "tags tags";
   justify-items: center;
   row-gap: 18px;
-  padding: 20px 25px 59px;
+  padding: 24px 25px 34px;
 
   @media (min-width: @tablet-width) {
     grid-template-areas: "badge empty empty avatar"
@@ -32,6 +32,9 @@
 }
 
 .user-profile__badge {
+  position: relative;
+  top: 1px;
+  left: -1px;
   grid-area: badge;
   width: 100px;
   height: 100px;
@@ -69,7 +72,7 @@
 .user-profile__change-avatar {
   grid-area: button;
   width: 100%;
-  margin-bottom: 7px;
+  margin-bottom: 9px;
 
   @media (min-width: @desktop-width) {
     width: 190px;
