Adds interactive states to description fields

--- a/source/less/blocks/descriptions.less
+++ b/source/less/blocks/descriptions.less
@@ -128,8 +128,14 @@
   border-radius: 4px;
   resize: none;
 
+  &:hover {
+    border-color: @special-border-blue-fade;
+  }
+
+  &:active,
   &:focus {
     color: @special-grey;
+    border-color: @black;
   }
 
   @media (min-width: @tablet-width) {
