Makes countries dropdown PP

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -227,6 +227,8 @@
   }
 
   &--select-clicked {
+    padding-left: 17px;
+    letter-spacing: 0.02em;
     color: @white;
     background-color: @basic-blue-light;
     border-color: @basic-blue-light;
