--- a/source/less/blocks/level-badge.less
+++ b/source/less/blocks/level-badge.less
@@ -63,6 +63,13 @@
 }
 
 // User profile badge
+.level-badge--user-profile .level-badge__level-bar {
+  @media (min-width: @tablet-width) {
+    width: 96px;
+    height: 96px;
+  }
+}
+
 .level-badge--user-profile .level-badge__number {
   top: 18px;
 }
