--- a/source/less/blocks/plans.less
+++ b/source/less/blocks/plans.less
@@ -2,7 +2,7 @@
   padding: 28px 25px 55px;
 
   @media (min-width: @tablet-width) {
-    padding: 57px 75px 114px;
+    padding: 57px 75px 101px;
   }
 
   @media (min-width: @desktop-width) {
@@ -10,7 +10,11 @@
   }
 }
 
-.plans .plans__title {
+.plans__title {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 48px;
+  }
+
   @media (min-width: @desktop-width) {
     margin-bottom: 49px;
   }
