--- a/source/less/blocks/add-plan.less
+++ b/source/less/blocks/add-plan.less
@@ -4,10 +4,10 @@
   grid-template-areas: "title steps"
     "form form";
   grid-template-columns: 1fr min-content;
-  padding: 30px 25px 108px;
+  padding: 30px 25px 109px;
 
   @media (min-width: @tablet-width) {
-    padding: 53px 75px 114px;
+    padding: 53px 75px 158px;
   }
 
   @media (min-width: @desktop-width) {
@@ -18,6 +18,10 @@
 .add-plan__title {
   grid-area: title;
   padding-right: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 56px;
+  }
 }
 
 .add-plan .add-plan__title {
@@ -28,12 +32,13 @@
 
 .add-plan__steps-tracker {
   grid-area: steps;
-  margin-top: 1px;
-  margin-right: 18px;
+  position: relative;
+  top: 1px;
+  right: 18px;
 
   @media (min-width: @tablet-width) {
-    // top: 66px;
-    // right: 73px;
+    top: 4px;
+    right: -2px;
   }
 
   @media (min-width: @desktop-width) {
@@ -48,15 +53,27 @@
   list-style: none;
 }
 
-.add-plan__step:not(:last-child) {
+.add-plan__step {
   margin-bottom: 10px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   @media (min-width: @tablet-width) {
     margin-bottom: 39px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 44px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
