--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -16,14 +16,9 @@
 }
 
 .info__fieldset {
-  padding: 16px 22px 17px;
-
-  @media (min-width: @tablet-width) {
-    padding: 24px;
-  }
-
   &--tags {
     order: 1;
+    padding: 0;
 
     @media (min-width: @tablet-width) {
       order: 2;
@@ -44,12 +39,13 @@
 
     @media (min-width: @tablet-width) {
       position: relative;
-      top: -250px;
+      top: -302px;
       order: 1;
       box-sizing: border-box;
       width: unset;
       min-width: 308px;
-      margin-bottom: -110px;
+      margin-bottom: -140px;
+      padding: 25px;
     }
 
     @media (min-width: @desktop-width) {
@@ -72,6 +68,7 @@
     position: absolute;
     bottom: 0;
     left: 50%;
+    letter-spacing: 0.1em;
     transform: translate(-50%, 50%);
     background-color: @basic-steelblue;
   }
