--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -117,7 +117,7 @@
 
   @media (min-width: @tablet-width) {
     padding: 224px 75px 66px;
-    border-radius: 0 0 50px 50px;
+    border-radius: 0 0 60px 60px;
   }
 
   @media (min-width: @desktop-width) {
@@ -172,7 +172,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    border-radius: 40px 40px 0 0;
+    border-radius: 30px 30px 0 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -182,11 +182,13 @@
 }
 
 .page-main--inner .page-main__title {
-  margin: 0 0 29px;
   color: @basic-blue-light;
 
+  @media (max-width: @mobile-width-only) {
+    margin: 0 0 29px;
+  }
+
   @media (min-width: @tablet-width) {
-    margin-bottom: 56px;
     .fontsize(36px);
   }
 
@@ -214,12 +216,12 @@
       .fontsize(60px);
 
       &::after {
-        bottom: -68px;
+        bottom: -70px;
         height: 8px;
       }
     }
 
-    @media (min-width: @tablet-width) {
+    @media (min-width: @desktop-width) {
       &::after {
         bottom: -71px;
       }
