--- a/source/less/blocks/steps-tracker.less
+++ b/source/less/blocks/steps-tracker.less
@@ -41,6 +41,14 @@
     color: fade(@basic-blue-light, 30%);
   }
 
+  @media (min-width: @tablet-width) {
+    margin-right: 8px;
+
+    &::marker {
+      font-size: 25px;
+    }
+  }
+
   @media (min-width: @desktop-width) {
     margin-bottom: 27px;
   }
