--- a/source/less/blocks/user-profile.less
+++ b/source/less/blocks/user-profile.less
@@ -13,7 +13,7 @@
       "tags tags tags tags";
     grid-template-columns: 164px 1fr 1fr 164px;
     grid-row-gap: 51px;
-    padding: 66px 75px 86px;
+    padding: 66px 75px 41px;
   }
 
   @media (min-width: @desktop-width) {
@@ -40,6 +40,7 @@
   height: 100px;
 
   @media (min-width: @tablet-width) {
+    justify-self: start;
     width: 94px;
     height: 94px;
   }
@@ -57,6 +58,7 @@
   .circle(100px);
 
   @media (min-width: @tablet-width) {
+    justify-self: end;
     width: 94px;
     height: 94px;
     border-radius: 7px;
@@ -73,6 +75,10 @@
   grid-area: button;
   width: 100%;
   margin-bottom: 9px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 46px;
+  }
 
   @media (min-width: @desktop-width) {
     width: 190px;
