Adds shadow color variable

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -35,8 +35,9 @@
 @special-orange-dark: #F26926;
 @special-pink: #F9EAEA;
 @special-green: #81E31E;
-@special-shadow: rgba(29, 46, 91, 0.14);
 @special-border-blue-fade: #959BB2;
+@special-shadow: rgba(29, 46, 91, 0.14);
+@special-shadow-darker: rgba(54, 80, 148, 0.18);
 
 // Viewports
 @mobile-width-only: 767px;
