Makes country choice dropdown PP on tablet

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -243,6 +243,11 @@
     &:hover {
       background-color: @basic-blue-light;
     }
+
+    @media (min-width: @tablet-width) {
+      padding: 23px 25px 21px;
+      letter-spacing: 0.1em;
+    }
   }
 
   &--dots {
